add setup logic and reset logic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <body>
 <h1>Lights Out!</h1>
-<h3>test</h3>
+<h3 id="message">click the squares until all the squares are darked out!</h3>
+<button id="reset">Reset</button>
     <table id="board">
         <tr>
             <td class="cell" id="cell-0-0"> </td>
